--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -44,3 +44,12 @@ width:105px;
    font-size: 22px;
    font-weight: 500;
 }
+.hero-right{
+    flex:1;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+.hero-right img{
+    height: 700px;
+}
