--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,6 +1,6 @@
 .hero{
     height:100vh;
-    background:linear-gradient(180deg,#fde1ff,#e1ffea22 60%) ;
+    background:linear-gradient(180deg,#e1e1ff,#e1fffd22 60%) ;
     display: flex;
 }
 .hero-left{
