--- a/src/components/Newsletter/Newsletter.css
+++ b/src/components/Newsletter/Newsletter.css
@@ -8,7 +8,7 @@
     margin: auto;
     padding: 0px 140px;
     margin-bottom: 150px;
-    background: linear-gradient(180deg,#fde1ff 0%,#e1ffea22 60%);
+    background: linear-gradient(180deg,#e1e1ff 0%,#e1fffd22 60%);
     gap: 30px;
     margin-top: 700px;
 }
@@ -41,11 +41,35 @@ font-weight: 600;
     font-size: 16px;
 }
 .newsletter div button{
-width: 210px;
+/* width: 210px;
 height: 70px;
 border-radius: 80px;
 background: black;
 color: white;
 font-size: 16px;
+cursor: pointer; */
+padding: 1.3em 3em;
+font-size: 12px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 500;
+color: #fff;
+background-color: #000;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
 cursor: pointer;
+outline: none;
+
 }
+.newsletter div button:hover {
+    background-color: #23c483;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: #fff;
+    transform: translateY(-7px);
+  }
+  
+  .newsletter div button:active {
+    transform: translateY(-1px);
+  }
