--- a/src/components/Offers/Offers.css
+++ b/src/components/Offers/Offers.css
@@ -5,7 +5,7 @@
     margin: auto;
     padding: 0px 140px;
     margin-bottom:15opx ;
-    background: linear-gradient(180deg,#fde1ff 0%,#e1ffea22 60%);
+    background: linear-gradient(180deg,#e1e1ff 0%,#e1fffd22 60%);
     margin-top: 60px;
 }
 .offers-left{
@@ -24,8 +24,21 @@
     font-size: 22px;
     font-weight: 600;
 }
+.backdrop {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    background-color: rgb(36, 33, 228);
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    border-radius: 15px;
+    transform: translateX(-50%) translateY(-50%);
+    transition: all ease-in-out 0.5s;
+  }
+  
 .offers-left button{
-    width: 282px;
+    /* width: 282px;
     height: 70px;
     border-radius: 35px;
     background: #ff4141;
@@ -34,8 +47,78 @@
     font-size: 22px;
     font-weight: 500;
     margin-top: 30px;
+    cursor: pointer; */
+    position: relative;
+    width: 150px;
+    height: 55px;
+    border-radius: 45px;
+    border: none;
+    background-color: rgb(151, 95, 255);
+    color: white;
+    box-shadow: 0px 10px 10px rgb(210, 187, 253) inset,
+    0px 5px 10px rgba(5, 5, 5, 0.212),
+    0px -10px 10px rgb(124, 54, 255) inset;
     cursor: pointer;
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+    .offers-left button::before {
+        width: 70%;
+        height: 2px;
+        position: absolute;
+        background-color: rgba(250, 250, 250, 0.678);
+        content: "";
+        filter: blur(1px);
+        top: 7px;
+        border-radius: 50%;
+      }
+      
+      .offers-left button::after {
+        width: 70%;
+        height: 2px;
+        position: absolute;
+        background-color: rgba(250, 250, 250, 0.137);
+        content: "";
+        filter: blur(1px);
+        bottom: 7px;
+        border-radius: 50%;
+      }
+      
+      .offers-left button:hover {
+        animation: jello-horizontal 0.9s both;
+      }
+      
+      @keyframes jello-horizontal {
+        0% {
+          transform: scale3d(1, 1, 1);
+        }
+      
+        30% {
+          transform: scale3d(1.25, 0.75, 1);
+        }
+      
+        40% {
+          transform: scale3d(0.75, 1.25, 1);
+        }
+      
+        50% {
+          transform: scale3d(1.15, 0.85, 1);
+        }
+      
+        65% {
+          transform: scale3d(0.95, 1.05, 1);
+        }
+      
+        75% {
+          transform: scale3d(1.05, 0.95, 1);
+        }
+      
+        100% {
+          transform: scale3d(1, 1, 1);
+        }
+      }
+      
 .offers-right{
     flex:1;
     display: flex;
